syntax = "proto3";

package auth.v1;

option go_package = "github.com/morning-night-dream/platform-app/pkg/connect/proto/auth/v1;authv1";

// 認証サービス
service AuthService {
  // サインアップ
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  // サインイン
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  // サインアウト
  rpc SignOut(SignOutRequest) returns (SignOutResponse) {}
  // パスワード変更
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
  // 削除
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// サインアップリクエスト
message SignUpRequest {
  string email = 1;
  string password = 2;
}

// サインアップレスポンス
message SignUpResponse {}

// サインインリクエスト
message SignInRequest {
  string email = 1;
  string password = 2;
}

// サインインレスポンス
message SignInResponse {}

// サインアウトリクエスト
message SignOutRequest {}

// サインアウトレスポンス
message SignOutResponse {}

// パスワード変更リクエスト
message ChangePasswordRequest {
  string email = 1;
  string old_password = 2;
  string new_password = 3;
}

// パスワード変更レスポンス
message ChangePasswordResponse {}

// 削除リクエスト
message DeleteRequest {
  string email = 1;
  string password = 2;
}

// 削除レスポンス
message DeleteResponse {}
